--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Welcme to my web</h1>
+    <h1> Welcme to my web mergee</h1>
 </body>
 </html>
